
New Features:

- Updated gradle build files to work with Gradle 1.3
- Added XML Form fields-not-referenced element to specify where to render
  the fields not explicitly referenced under the field-layout element
- Small adjustment to transition parameter so that if explicitly defined as
  empty that will be used instead of defaulting to value from context or
  web parameters

Bug Fixes:

- Fixed URLs for Mantle UBPL links using active screen URL as the default
  base URL instead of the full URL of the current screen
- Fixed issue where form-list-column and field-layout nodes in an extended
  screen modified the original node from the base screen
- Fixed issue in entity-auto create where automatically set fromDate was
  not returned in the service result
- Fixed issue in screens with a form-list and then a form-single where
  listEntryIndex bleeds over and results in a _?? to field IDs and such
- Fixed issue with date/time parsing and formatting to more consistently
  user user time zone, avoids time discrepancies between input and display
  while leaving hidden fields as plain toString/etc


===========================================================================
Release 1.2.0 - 30 Dec 2012
===========================================================================

Moqui Framework release 1.2.0 is a minor new feature release and a major
quality improvement release. This release has undergone significantly more
testing than previous releases because of a wider variety of functionality
that has now been built and tested using the framework, and because of a
unit testing effort (framework unit tests built using Spock).

The new features include popup menus (using the new jQueryUI menu widget),
dynamic-options in XML Form drop-downs with dependency on other fields,
automatic optimization of queries on view-entities to old select member
entities necessary, support for UUID generated primary keys, expanded JCR