@@ -15,6 +15,8 @@ New Features:
 - Small adjustment to transition parameter so that if explicitly defined as
   empty that will be used instead of defaulting to value from context or
   web parameters
+- Improved date/time and number parsing for String values passed to an
+  entity, partly so that implicit entity-auto services are more usable
 
 Bug Fixes:
 
